--- a/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
+++ b/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
@@ -11,18 +11,16 @@
                 <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
             <div class="col-lg-9 ps-5 table-dashboard category">
-                <div class="create">
-                    <a href="/booking/add"><i class="fa-solid fa-square-plus"></i> Thêm mới đơn hàng</a>
-                </div>
                 <div class="table-main">
                     <div class="search-table">
                         <form action="/booking/">
                             <div class="row">
                                 <div class="col-lg-5">
                                     <div class="col-lg-6 form-floating mb-3">
-                                        <input type="text" class="form-control" id="idCategory" name="nameSearch"
-                                               placeholder="Nhập tên khách hàng" th:value="${nameSearch}">
-                                        <label for="idCategory"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo tên khách hàng</label>
+                                        <input type="date" class="form-control" id="idCategory" name="dateSearch"
+                                               placeholder="Chọn ngày" th:value="${dateSearch}">
+                                        <label for="idCategory"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo
+                                            ngày chiếu</label>
                                     </div>
                                 </div>
                                 <div class="col-lg-7 d-flex justify-content-end">
@@ -39,32 +37,37 @@
                             </div>
                         </form>
                     </div>
-                    <table class="table table-hover">
+                    <h3 style="text-align: center; margin: 60px" th:if="${bookingPage.isEmpty()}">Không có dữ liệu </h3>
+                    <table class="table table-hover" th:unless="${bookingPage.isEmpty()}">
                         <thead>
                         <tr>
                             <th scope="col">STT</th>
                             <th scope="col">TÊN KHÁCH HÀNG</th>
                             <th scope="col">TÊN PHIM</th>
                             <th scope="col">SỐ ĐIỆN THOẠI</th>
-                            <th scope="col">NGÀY BOOKING</th>
+                            <th scope="col">NGÀY CHIẾU</th>
                             <th scope="col">GIÁ(VNĐ)</th>
                             <th scope="col">CHỨC NĂNG</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="item, status: ${bookingPage}">
-                            <td th:text="${status.count}">#12921</td>
+                        <tr th:each="item,status: ${bookingPage}">
+                            <td th:text="${(bookingPage.number)*bookingPage.pageable.pageSize+status.count}">#12921
+                            </td>
                             <td th:text="${item.customer.fullName}">Vầng Trăng Máu</td>
                             <td th:text="${item.showTime.movie.title}">Vầng Trăng Máu</td>
                             <td th:text="${item.customer.phoneNumber}">Vầng Trăng Máu</td>
                             <td th:text="${item.showTime.showDate}">Vầng Trăng Máu</td>
-                            <td th:text="${#numbers.formatDecimal(item.showTime.price, 0, 'COMMA', 0, 'POINT')}"></td>                            <td>
+                            <td th:text="${#numbers.formatDecimal(item.showTime.price, 0, 'COMMA', 0, 'POINT')}"></td>
+                            <td>
                                 <a th:href="@{/booking/view(id=${item.id})}" title="Xem chi tiết"><i
                                         class="fa-solid fa-file-lines"></i></a>
-                                <a th:href="@{/booking/edit/__${item.id}__(movie=${item.showTime.movie.id})}" title="Sửa"><i
+                                <a th:href="@{/booking/edit/__${item.id}__(movie=${item.showTime.movie.id})}"
+                                   title="Sửa"><i
                                         class="fa-solid fa-pen-to-square"></i></a>
-                                <a  type="button" th:attr="onclick=|sendDataModal('${item.id}','${item.codeBooking}')|" title="Xóa"
-                                   role="button" data-bs-toggle="modal" data-bs-target="#exampleModal" ><i
+                                <a type="button" th:attr="onclick=|sendDataModal('${item.id}','${item.codeBooking}')|"
+                                   title="Xóa"
+                                   role="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i
                                         class="fa-solid fa-trash-can"></i></a>
                             </td>
                         </tr>
@@ -72,20 +75,21 @@
                     </table>
                 </div>
 
-                <nav aria-label="Page navigation example">
+                <nav aria-label="Page navigation example" th:if="${bookingPage.totalPages > 1}">
                     <ul class="pagination justify-content-center">
                         <li th:class="${bookingPage.hasPrevious() ? 'page-item' : 'page-item disabled'}">
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()}+ '?page=' +
                             ${bookingPage.number - 1} +
-                            ${nameSearch != null && nameSearch != '' ? '&nameSearch='+nameSearch:''} +
+                            ${dateSearch != null && dateSearch != '' ? '&dateSearch='+dateSearch:''} +
                             ${phoneSearch != null && phoneSearch != '' ? '&phoneSearch='+phoneSearch:''}
                             }">Trước</a>
                         </li>
-                        <li th:each="i : ${#numbers.sequence(0, bookingPage.totalPages - 1)}" th:class="${i == bookingPage.number ? 'page-item active' : 'page-item'}">
+                        <li th:each="i : ${#numbers.sequence(0, bookingPage.totalPages - 1)}"
+                            th:class="${i == bookingPage.number ? 'page-item active' : 'page-item'}">
                             <a class="page-link" th:text="${i + 1}" th:href="@{
                             ${#httpServletRequest.getRequestURI()} + '?page=' + ${i} +
-                            ${nameSearch != null && nameSearch != '' ? '&nameSearch='+nameSearch:''} +
+                            ${dateSearch != null && dateSearch != '' ? '&dateSearch='+dateSearch:''} +
                             ${phoneSearch != null && phoneSearch != '' ? '&phoneSearch='+phoneSearch:''}
                             }"></a>
                         </li>
@@ -93,7 +97,7 @@
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()} + '?page=' +
                             ${bookingPage.number + 1} +
-                            ${nameSearch != null && nameSearch != '' ? '&nameSearch='+nameSearch:''} +
+                            ${dateSearch != null && dateSearch != '' ? '&dateSearch='+dateSearch:''} +
                             ${phoneSearch != null && phoneSearch != '' ? '&phoneSearch='+phoneSearch:''}
                             }">Tiếp</a>
                         </li>
@@ -105,30 +109,33 @@
                      aria-hidden="true">
                     <div class="modal-dialog">
                         <form action="/booking/delete" method="post">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <div class="d-flex">
-                                    <div class="icon">
-                                        <i class="fa-regular fa-bell"></i>
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <div class="d-flex">
+                                        <div class="icon">
+                                            <i class="fa-regular fa-bell"></i>
+                                        </div>
+                                        <div class="box-header-modal">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Cảnh báo</h1>
+                                            <p>Hành động nguy hiểm !</p>
+                                        </div>
                                     </div>
-                                    <div class="box-header-modal">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Cảnh báo</h1>
-                                        <p>Hành động nguy hiểm !</p>
-                                    </div>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                        <i
+                                                class="fa-solid fa-circle-xmark"></i></button>
                                 </div>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i
-                                        class="fa-solid fa-circle-xmark"></i></button>
+                                <div class="modal-body">
+                                    Bạn có chắc chắn muốn xóa danh mục phim <span id="name-delete"
+                                                                                  class="text-danger"></span> này không
+                                    ?
+                                    Hành động này sẽ không thể khôi phục lại !
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng
+                                    </button>
+                                    <button id="active-delete" type="button" class="btn btn-danger">Xóa</button>
+                                </div>
                             </div>
-                            <div class="modal-body">
-                                Bạn có chắc chắn muốn xóa danh mục phim <span id="name-delete"
-                                                                              class="text-danger"></span> này không ?
-                                Hành động này sẽ không thể khôi phục lại !
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                                <button id="active-delete" type="button" class="btn btn-danger">Xóa</button>
-                            </div>
-                        </div>
                         </form>
                     </div>
                 </div>
