--- a/movie-ticket/src/main/resources/templates/layout.html
+++ b/movie-ticket/src/main/resources/templates/layout.html
@@ -14,15 +14,15 @@
 <div th:fragment="sidebar-admin">
     <h4>MENU</h4>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item active"><a href="#"><i class="fa-solid fa-gauge-high"></i> Tổng quan</a></li>
-        <li class="list-group-item"><a href="#"><i class="fa-solid fa-ticket"></i> Quản lý đơn hàng</a></li>
-        <li class="list-group-item"><a href="#"><i class="fa-solid fa-clapperboard"></i> Quản lý phim</a></li>
+        <li class="list-group-item active"><a href="/dashboard"><i class="fa-solid fa-gauge-high"></i> Tổng quan</a></li>
+        <li class="list-group-item"><a href="/dashboard/booking"><i class="fa-solid fa-ticket"></i> Quản lý đơn hàng</a></li>
+        <li class="list-group-item"><a href="/dashboard/movies"><i class="fa-solid fa-clapperboard"></i> Quản lý phim</a></li>
         <li class="list-group-item"><a href="/dashboard/category"><i class="fa-solid fa-bookmark"></i> Quản lý danh
             mục phim</a></li>
-        <li class="list-group-item"><a href="#"><i class="fa-solid fa-user-pen"></i></i> Quản lý nhân viên</a></li>
-        <li class="list-group-item"><a href="#"><i class="fa-solid fa-users-viewfinder"></i></i> Quản lý khách hàng</a>
+        <li class="list-group-item"><a href="/dashboard/employee"><i class="fa-solid fa-user-pen"></i></i> Quản lý nhân viên</a></li>
+        <li class="list-group-item"><a href="/dashboard/customer/"><i class="fa-solid fa-users-viewfinder"></i></i> Quản lý khách hàng</a>
         </li>
-        <li class="list-group-item"><a href="#"><i class="fa-solid fa-file-lines"></i></i> Quản lý bài viết</a></li>
+        <li class="list-group-item"><a href="/dashboard/blogs"><i class="fa-solid fa-file-lines"></i></i> Quản lý bài viết</a></li>
         <li class="list-group-item">
             <a href="#" data-bs-toggle="modal" data-bs-target="#logOutAdmin"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
         </li>
@@ -127,7 +127,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/user/logout">Đăng xuất</a></li>
+                            <li><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
                         </ul>
                     </div>
                 </div>
