--- a/movie-ticket/src/main/resources/templates/employee/create-employee.html
+++ b/movie-ticket/src/main/resources/templates/employee/create-employee.html
@@ -17,18 +17,21 @@
                         <label for="name" class="col-sm-2 col-form-label">Tên Nhân Viên</label>
                         <div class="col-sm-10">
                             <input th:field="*{fullName}" type="text" class="form-control" id="name" required>
+                            <td th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="email" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-10">
                             <input th:field="*{email}" type="text" class="form-control" id="email" required>
+                            <td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="phoneNumber" class="col-sm-2 col-form-label">SĐT</label>
                         <div class="col-sm-10">
                             <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" required>
+                            <td th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -40,7 +43,8 @@
                     <div class="row mb-3">
                         <label for="idCard" class="col-sm-2 col-form-label">ID Card</label>
                         <div class="col-sm-10">
-                            <input th:field="*{idCard}" type="number" class="form-control" id="idCard" required>
+                            <input th:field="*{idCard}" type="text" class="form-control" id="idCard" required>
+                            <td th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -49,13 +53,12 @@
                             <input th:field="*{address}" type="text" class="form-control" id="address" required>
                         </div>
                     </div>
-<!--                    <td><label>-->
-<!--                        Category-->
-<!--                    </label>-->
-<!--                        <select th:field="*{account}">-->
-<!--                            <option th:each="ac:${acountList}" th:text="${cate.userName}" th:value="${ac.id}"></option>-->
-<!--                        </select>-->
-<!--                    </td>-->
+                    <div class="row mb-3">
+                        <label for="account">Account:</label>
+                        <select type="text" class="form-control" id="account" th:field="*{account}">
+                            <option th:each="item:${accountList}" th:text="${item.username}" th:value="${item.id}"></option>
+                        </select>
+                    </div>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-primary">Thêm mới</button>
                     </div>
@@ -65,38 +68,5 @@
     </section>
 </div>
 <footer th:replace="~{layout::footer}"></footer>
-<script>
-    function limitFiles(input, maxFiles) {
-        if (input.files.length > maxFiles) {
-            alert(`Chỉ được chọn đúng ${maxFiles} tệp.`);
-            input.value = ""; // Xóa tệp đã chọn nếu vượt quá giới hạn
-        }
-    }
-
-    document.getElementById("upload-file").addEventListener("change", function (e) {
-        document.getElementById("preview-image-add").style.display = "flex";
-        const container = document.getElementById("image-preview-container2");
-        container.innerHTML = "";
-        const maxFiles = 1;
-        const files = e.target.files;
-        if (files.length !== maxFiles) {
-            alert(`Bạn phải chọn đúng ${maxFiles} tệp.`);
-            e.target.value = "";
-            return;
-        }
-        for (let i = 0; i < files.length; i++) {
-            const file = files[i];
-            const img = document.createElement("img");
-            img.src = URL.createObjectURL(file);
-            img.style.width = "300px"
-            img.style.height = "150px"
-            container.appendChild(img);
-        }
-    });
-</script>
-<script type="module" src="/js/configulation.js"></script>
-<script type="module" src="/js/upload.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
 </body>
 </html>
