--- a/movie-ticket/src/main/resources/templates/employee/edit-employee.html
+++ b/movie-ticket/src/main/resources/templates/employee/edit-employee.html
@@ -11,43 +11,55 @@
                 <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
             <div class="col-lg-9 ps-5 table-dashboard category">
-                <h3 th:text="${'Chỉnh sửa danh mục phim ' + employee.id}">Chỉnh sửa danh mục phim</h3>
-                <form class="edit-item my-4" th:object="${employee}" method="post">
+                <h3 th:text="${'Chỉnh sửa nhân viên ' + employeeDTO.fullName}">Chỉnh sửa danh mục phim</h3>
+                <form class="edit-item my-4" th:object="${employeeDTO}" method="post">
                     <div class="row mb-3">
                         <label for="fullName" class="col-sm-2 col-form-label">Chỉnh sửa tên Nhân Viên</label>
                         <div class="col-sm-10">
                             <input th:field="*{fullName}" type="text" class="form-control" id="fullName" required>
+                            <td th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="email" class="col-sm-2 col-form-label">Chỉnh sửa Email </label>
                         <div class="col-sm-10">
                             <input th:field="*{email}" type="text" class="form-control" id="email" required>
+                            <td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="phoneNumber" class="col-sm-2 col-form-label">Chỉnh sửa SĐT </label>
                         <div class="col-sm-10">
                             <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" required>
+                            <td th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="birthday" class="col-sm-2 col-form-label">Chỉnh sửa Ngày, tháng, năm sinh</label>
                         <div class="col-sm-10">
                             <input th:field="*{birthday}" type="date" class="form-control" id="birthday" required>
+                            <td th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="idCard" class="col-sm-2 col-form-label">Chỉnh sửa ID Card</label>
                         <div class="col-sm-10">
                             <input th:field="*{idCard}" type="number" class="form-control" id="idCard" required>
+                            <td th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}">Name Error</td>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="address" class="col-sm-2 col-form-label">Chỉnh sửa Địa chỉ</label>
                         <div class="col-sm-10">
                             <input th:field="*{address}" type="text" class="form-control" id="address" required>
+                            <td th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Name Error</td>
                         </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label for="account">Account:</label>
+                        <select type="text" class="form-control" id="account" th:field="*{account}">
+                            <option th:each="item:${accountList}" th:text="${item.username}" th:value="${item.id}"></option>
+                        </select>
                     </div>
 
                     <div class="d-flex justify-content-center">
@@ -59,37 +71,5 @@
     </section>
 </div>
 <footer th:replace="~{layout::footer}"></footer>
-<script>
-    function limitFiles(input, maxFiles) {
-        if (input.files.length > maxFiles) {
-            alert(`Chỉ được chọn đúng ${maxFiles} tệp.`);
-            input.value = ""; // Xóa tệp đã chọn nếu vượt quá giới hạn
-        }
-    }
-
-    document.getElementById("upload-file").addEventListener("change", function (e) {
-        const container = document.getElementById("image-preview-container2");
-        container.innerHTML = "";
-        const maxFiles = 1;
-        const files = e.target.files;
-        if (files.length !== maxFiles) {
-            alert(`Bạn phải chọn đúng ${maxFiles} tệp.`);
-            e.target.value = "";
-            return;
-        }
-        for (let i = 0; i < files.length; i++) {
-            const file = files[i];
-            const img = document.createElement("img");
-            img.src = URL.createObjectURL(file);
-            img.style.width = "300px"
-            img.style.height = "150px"
-            container.appendChild(img);
-        }
-    });
-</script>
-<script type="module" src="/js/configulation.js"></script>
-<script type="module" src="/js/upload.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
 </body>
 </html>
