--- a/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
+++ b/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
@@ -3,6 +3,9 @@
 <head th:replace="~{layout::head}">
 </head>
 <body>
+<div th:if="${success}">
+    <span th:text="${success}" id="success" style="display: none"></span>
+</div>
 <div class="container">
     <header th:replace="~{layout::header}"></header>
     <section>
@@ -124,16 +127,18 @@
                                         <i
                                                 class="fa-solid fa-circle-xmark"></i></button>
                                 </div>
+                                <input type="text" hidden="hidden" name="id" id="id">
                                 <div class="modal-body">
-                                    Bạn có chắc chắn muốn xóa danh mục phim <span id="name-delete"
+                                    Bạn có chắc chắn muốn xóa đơn hàng <span id="name"
                                                                                   class="text-danger"></span> này không
                                     ?
                                     Hành động này sẽ không thể khôi phục lại !
+
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng
                                     </button>
-                                    <button id="active-delete" type="button" class="btn btn-danger">Xóa</button>
+                                    <button type="submit" class="btn btn-danger">Xóa</button>
                                 </div>
                             </div>
                         </form>
@@ -146,10 +151,25 @@
 <footer th:replace="~{layout::footer}"></footer>
 <script>
     function sendDataModal(id, name) {
-        $("#name-delete").html(name)
-        $("#active-delete").attr("href", "/booking/delete/" + id)
+        document.getElementById("name").innerHTML = name;
+        document.getElementById("id").value = id;
+        console.log(id)
     }
 
+</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        let success = document.getElementById("success").innerText;
+        console.log(success)
+        Swal.fire({
+            title: success,
+            icon: 'success',
+            timer: 1500,
+            timerProgressBar: true,
+            showConfirmButton: false
+        });
+    });
 </script>
 </body>
 </html>
