--- a/movie-ticket/src/main/resources/templates/movie/details.html
+++ b/movie-ticket/src/main/resources/templates/movie/details.html
@@ -79,7 +79,7 @@
                                 <!--                                <input class="form-control-plaintext" id="description" readonly-->
                                 <!--                                       th:value="${movie.description}"-->
                                 <!--                                       type="text">-->
-                                <p id="description" th:text="${movie.description}"></p>
+                                <p style="height: 200px; overflow-y: scroll" id="description" th:text="${movie.description}"></p>
                             </div>
                         </div>
                     </div>
