--- a/movie-ticket/src/main/resources/templates/employee/edit-employee.html
+++ b/movie-ticket/src/main/resources/templates/employee/edit-employee.html
@@ -17,42 +17,42 @@
                         <label for="fullName" class="col-sm-2 col-form-label">Chỉnh sửa tên Nhân Viên</label>
                         <div class="col-sm-10">
                             <input th:field="*{fullName}" type="text" class="form-control" id="fullName" required>
-                            <td th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name Error</td>
+                            <p class="field-error" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name Error</p>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="email" class="col-sm-2 col-form-label">Chỉnh sửa Email </label>
                         <div class="col-sm-10">
                             <input th:field="*{email}" type="text" class="form-control" id="email" required>
-                            <td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</td>
+                            <p class="field-error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</p>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="phoneNumber" class="col-sm-2 col-form-label">Chỉnh sửa SĐT </label>
                         <div class="col-sm-10">
                             <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" required>
-                            <td th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Name Error</td>
+                            <p class="field-error" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Name Error</p>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="birthday" class="col-sm-2 col-form-label">Chỉnh sửa Ngày, tháng, năm sinh</label>
                         <div class="col-sm-10">
                             <input th:field="*{birthday}" type="date" class="form-control" id="birthday" required>
-                            <td th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Name Error</td>
+                            <p class="field-error" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}"></p>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="idCard" class="col-sm-2 col-form-label">Chỉnh sửa ID Card</label>
                         <div class="col-sm-10">
                             <input th:field="*{idCard}" type="number" class="form-control" id="idCard" required>
-                            <td th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}">Name Error</td>
+                            <p class="field-error" th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}">Name Error</p>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="address" class="col-sm-2 col-form-label">Chỉnh sửa Địa chỉ</label>
                         <div class="col-sm-10">
                             <input th:field="*{address}" type="text" class="form-control" id="address" required>
-                            <td th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Name Error</td>
+                            <p class="field-error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Name Error</p>
                         </div>
                     </div>
                     <div class="row mb-3">
