--- a/movie-ticket/src/main/resources/templates/seat.html
+++ b/movie-ticket/src/main/resources/templates/seat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="~{layout::head}">
 </head>
 <body>
@@ -7,9 +7,9 @@
     <header th:replace="~{layout::header}"></header>
     <section id="select-seats">
         <div class="row my-5 justify-content-center">
-            <h3 class="text-center mb-5" th:text="${'Chọn ghế xem phim '+showTime.movie.title}">Chọn ghế xem phim Cú Máy Ăn Tiền</h3>
+            <h3 class="text-center mb-5">Chọn ghế xem phim Cú Máy Ăn Tiền</h3>
             <div class="col-lg-9 map">
-                <form th:action="@{/showtime/check-out/__${id}__}" method="post">
+                <form th:action="@{/showtime/check-out}" method="post">
                     <div class="d-flex flex-column align-items-center text-center">
                         <h5 class="my-3">MÀN HÌNH</h5>
                         <hr style="width: 50%;color: #D9D9D9">
