--- a/movie-ticket/src/main/resources/templates/booking/edit-booking.html
+++ b/movie-ticket/src/main/resources/templates/booking/edit-booking.html
@@ -11,33 +11,45 @@
                 <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
             <div class="col-lg-9 ps-5 table-dashboard category">
-                <h3 th:text="${'Chỉnh sửa đơn hàng ' + bookingDto.codeBooking}">Chỉnh sửa đơn hàng</h3><span><button type="button" class="btn btn-warning">
-                <a  type="button" th:attr="onclick=|sendDataModal('${bookingDto.id}','${bookingDto.codeBooking}')|" title="Hủy" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Hủy đơn hàng</a></button></span>
+                <h3 th:text="${'Chỉnh sửa đơn hàng ' + bookingDto.codeBooking}">Chỉnh sửa đơn hàng</h3><span><button
+                    type="button" class="btn btn-warning">
+                <a type="button" th:attr="onclick=|sendDataModal('${bookingDto.id}','${bookingDto.codeBooking}')|"
+                   title="Hủy" role="button" data-bs-toggle="modal"
+                   data-bs-target="#exampleModal">Hủy đơn hàng</a></button></span>
                 <form class="edit-item my-4" action="/booking/edit" th:object="${bookingDto}" method="post">
                     <input type="hidden" th:field="*{id}">
-                    <input type="hidden" th:field="*{codeBooking}">
-                    <input type="hidden" th:field="*{customer}">
+<!--                    <input type="hidden" th:field="*{codeBooking}">-->
+<!--                    <input type="hidden" th:field="*{customer}">-->
                     <div class="row mb-3">
-                        <label for="inputTime" class="col-sm-2 col-form-label">Khung giờ xem</label>
+<!--                        <label for="inputTime" class="col-sm-2 col-form-label">Khung giờ xem</label>-->
                         <div class="col-sm-10">
-                            <select th:field="*{showTime}" class="form-select form-select-sm"
-                                    aria-label=".form-select-sm example" id="inputTime" >
-                                <option th:if="${time.movie.id == movies.id}" th:each="time:${showTimeList}" th:value="${time.id}" th:text="${time.showDate + ' to '+ time.startTime + '--'+time.endTime}">Hãy lựa chọn một khung giờ</option>
-                            </select>
+<!--                            <select class="form-select form-select-sm"-->
+<!--                                    aria-label=".form-select-sm example" id="inputTime">-->
+<!--                                <option th:if="${time.movie.id == movies.id}" th:each="time:${showTimeList}"-->
+<!--                                        th:value="${time.id}"-->
+<!--                                        th:text="${time.showDate + ' to '+ time.startTime + '&#45;&#45;'+time.endTime}">Hãy lựa-->
+<!--                                    chọn một khung giờ-->
+<!--                                </option>-->
+<!--                            </select>-->
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputSeat" class="col-sm-2 col-form-label">Chọn ghế xem</label>
+<!--                        <label for="inputSeat" class="col-sm-2 col-form-label">Chọn ghế xem</label>-->
                         <div class="col-sm-10">
-                            <select th:field="*{seatBookings}" class="form-select form-select-sm"
-                                    aria-label=".form-select-sm example" id="inputSeat" >
-                                <option disabled th:if="${bookingDto.id == seat.booking.id}" th:each="seat:${seatBooking}" th:value="${seat.id}" th:text="${seat.seat}">Hãy lựa chọn một khung giờ</option>
-                            </select>
+<!--                            <select th:field="*{seatBookings}" class="form-select form-select-sm"-->
+<!--                                    aria-label=".form-select-sm example" id="inputSeat">-->
+<!--                                <option disabled th:if="${bookingDto.id == seat.booking.id}"-->
+<!--                                        th:each="seat:${seatBooking}" th:value="${seat.id}" th:text="${seat.seat}">Hãy-->
+<!--                                    lựa chọn một khung giờ-->
+<!--                                </option>-->
+<!--                            </select>-->
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="/booking"> <button type="button" class="btn btn-warning">Quay Lại</button></a>
-                        <button type="submit" class="btn btn-primary"  style="margin-left: 320px">Cập Nhật</button>
+                        <a href="/booking">
+                            <button type="button" class="btn btn-warning">Quay Lại</button>
+                        </a>
+                        <button type="submit" class="btn btn-primary" style="margin-left: 320px">Cập Nhật</button>
                     </div>
                 </form>
             </div>
@@ -65,12 +77,11 @@
                 </div>
 
                 <div class="modal-body">
-                    <label for="id">
+                    <label for="idCancel">
                         <input type="text" hidden="hidden" name="idCancel" id="idCancel">
                     </label>
                     Bạn có chắc chắn muốn xóa đơn hàng <span id="name"
                                                              class="text-danger"></span> này không
-                    ?
                     Hành động này sẽ không thể khôi phục lại !
 
                 </div>
