--- a/movie-ticket/src/main/resources/templates/movie/update.html
+++ b/movie-ticket/src/main/resources/templates/movie/update.html
@@ -119,7 +119,7 @@
             const file = files[i];
             const img = document.createElement("img");
             img.src = URL.createObjectURL(file);
-            img.style.width = "300px"
+            // img.style.width = "300px"
             img.style.height = "150px"
             container.appendChild(img);
         }
